--- a/views/admin/clientsNcustomers/clients.hbs
+++ b/views/admin/clientsNcustomers/clients.hbs
@@ -118,13 +118,13 @@
                 <div class="container-fluid px-0">
                     <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <div class="row">
-                            <div class="col">
+                            <div class="col col-12 col-md-3 text-center text-md-start">
                                 <h1 class="h2">Clientes</h1>
                             </div>
-                            <div class="col col-6">
+                            <div class="col col-12 col-md-6">
                                 <div class="row">
                                     <div class="col"></div>
-                                    <div class="col col-sm-12 col-md-10 col-xl-10">    
+                                    <div class="col col-12 col-sm-10 col-md-12 col-lg-10">    
 
                                         {{!-- search bar  --}}
                                         <form action="/admin/clients/search" method="get">
