--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -120,13 +120,13 @@
 
                 <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <div class="row">
-                            <div class="col">
+                            <div class="col col-12 col-md-3 text-center text-md-start">
                                 <h1 class="h2">Vendedores</h1>
                             </div>
-                            <div class="col col-6">
+                            <div class="col col-12 col-md-6 pb-3 pb-md-0">
                                 <div class="row">
                                     <div class="col"></div>
-                                    <div class="col col-sm-12 col-md-10 col-xl-10">    
+                                    <div class="col col-12 col-sm-10 col-md-12 col-lg-10">    
 
                                         {{!-- search bar  --}}
                                         <form action="/admin/salesperson/search" method="get">
@@ -156,7 +156,7 @@
                                     <div class="col"></div>
                                 </div>
                             </div>
-                            <div class="col text-end">
+                            <div class="col col-12 col-md-3 text-center text-md-end">
                                 <a class="btn btn-success" href="/admin/add_employee">Añadir Empleado <i class="fa-solid fa-plus"></i></a>
                             </div>
                         </div>
