--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -119,13 +119,13 @@
 
                     <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <div class="row">
-                            <div class="col">
+                            <div class="col col-12 col-md-3 text-center text-md-start">
                                 <h1 class="h2">Categorias</h1>
                             </div>
-                            <div class="col col-6">
+                            <div class="col col-12 col-md-6">
                                 <div class="row">
                                     <div class="col"></div>
-                                    <div class="col col-sm-12 col-md-10 col-xl-10">    
+                                    <div class="col col-12 col-sm-10 col-md-12 col-xl-10 pb-3 pb-md-0">    
 
                                         {{!-- search bar  --}}
                                         <form action="/admin/categories/search" method="get">
@@ -138,7 +138,7 @@
                                     <div class="col"></div>
                                 </div>
                             </div>
-                            <div class="col text-end">
+                            <div class="col col-12 col-md-3 text-center text-md-end">
                             <a class="btn btn-success" href="/admin/add_category">Añadir Categoria <i class="fa-solid fa-plus"></i></a>
                             </div>
                         </div>
