--- a/public/css/styles_dashboard.css
+++ b/public/css/styles_dashboard.css
@@ -92,6 +92,22 @@ body {
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
 
+.brand-container {
+    width: 60px;
+    height: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.brand-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 110%;
+    height: 120%;
+}
+
 /* CONTENT */
 
 /* cards */
