improving the sidebar appearance from admin pages and fixing some visual issues in other admin pages

--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -213,7 +213,7 @@
                                         <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td>
                                     {{/if}}
                                     {{#if canceled}}
-                                        <td><span class="badge bg-danger">Cancelled <i class="fa-solid fa-xmark"></i></span></td>
+                                        <td><span class="badge bg-danger">Cancelado <i class="fa-solid fa-xmark"></i></span></td>
                                     {{/if}}
                                     <td class="date align-middle white-space-nowrap text-700 fs--1 ">{{fecha_de_pedido}}</td>
                                 </tr>
