--- a/views/admin/clientsNcustomers/add_employee.hbs
+++ b/views/admin/clientsNcustomers/add_employee.hbs
@@ -30,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             {{!-- side navbar --}}
-            {{> a_sidebar bar_home="true"}}
+            {{> a_sidebar bar_salesperson="true"}}
 
             <!-- dashboard -->
             
