--- a/views/partials/admin/a_sidebar.hbs
+++ b/views/partials/admin/a_sidebar.hbs
@@ -3,54 +3,95 @@
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
                 <a href="/admin/home" class="nav-link {{#if bar_home}}active{{else}}link-dark{{/if}}" aria-current="page">
-                    <i class="fa-solid fa-house"></i>
-                    Home 
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <i class="fa-solid fa-house"></i>
+                        </div>
+                        <div class="col ">
+                            Inicio 
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/orders" class="nav-link {{#if bar_orders}}active{{else}}link-dark{{/if}}">
-                    <i class="fa-regular fa-note-sticky"></i>
-                    Ordenes
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <i class="fa-regular fa-note-sticky"></i>
+                        </div>
+                        <div class="col">
+                            Ordenes
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/products" class="nav-link {{#if bar_products}}active{{else}}link-dark{{/if}}">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    Productos
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </div>
+                        <div class="col">
+                            Productos
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/categories" class="nav-link {{#if bar_categories}}active{{else}}link-dark{{/if}}">
-                    <i class="fa-solid fa-tag"></i>
-                    Categorias
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                        <i class="fa-solid fa-tag"></i>
+                        </div>
+                        <div class="col">
+                            Categorias
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/clients" class="nav-link {{#if bar_clients}}active{{else}}link-dark{{/if}}">
-                    <i class="fa-solid fa-users"></i>
-                    Clientes
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <i class="fa-solid fa-users"></i>
+                        </div>
+                        <div class="col">
+                            Clientes
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/salesperson" class="nav-link {{#if bar_salesperson}}active{{else}}link-dark{{/if}}">
-                    <span class="me-2">
-                        <i class="fa-regular fa-id-badge"></i> 
-                    </span>
-                    Vendedores
+                    
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <i class="fa-regular fa-id-badge"></i>
+                        </div>
+                        <div class="col">
+                            Vendedores
+                        </div>
+                    </div>
                 </a>
             </li>
             <li>
                 <a href="/admin/reports" class="nav-link {{#if bar_reports}}active{{else}}link-dark{{/if}}">
-                <span class="me-0">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
-                        <line x1="18" y1="20" x2="18" y2="10"></line>
-                        <line x1="12" y1="20" x2="12" y2="4"></line>
-                        <line x1="6" y1="20" x2="6" y2="14"></line>
-                    </svg>
-                </span>
-                    Reportes
+                    <div class="row">
+                        <div class="col col-2 text-center px-0" style="width: 30px">
+                            <span class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
+                                    <line x1="18" y1="20" x2="18" y2="10"></line>
+                                    <line x1="12" y1="20" x2="12" y2="4"></line>
+                                    <line x1="6" y1="20" x2="6" y2="14"></line>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="col">
+                            Reportes
+                        </div>
+                    </div>
                 </a>
             </li>
         </ul>
@@ -65,7 +106,7 @@
             </a>
             <ul class="dropdown-menu text-small shadow">
                 <li><a class="dropdown-item" href="/admin/add_employee">Crear Nuevo Usuario</a></li>
-                <li><a class="dropdown-item" href="/admin/settings">Ajustes</a></li>
+                {{!-- <li><a class="dropdown-item" href="/admin/settings">Ajustes</a></li> --}}
                 <li><a class="dropdown-item" href="/admin/edit_employee/{{admin.id}}">Perfil</a></li>
                 <li>
                     <hr class="dropdown-divider">
