improving some visual stuff in the clients page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -127,15 +127,15 @@
                 <h2 class="mb-0 mb-lg-5 features-heading    ">Productos Más Vendidos</h2>
                 <div class="row pt-0 pt-lg-5">
                     <div class="col col-12 col-lg-4">
-                        <a href="/subs/market.html"><img src="images/arduino.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature1"></a>
+                        <a href="/marketplace"><img src="images/arduino.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature1"></a>
                         <h3>Arduino</h3>
                     </div>
                     <div class="col col-12 col-lg-4">
-                        <a href="/subs/market.html"><img src="images/impresora.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature2"></a>
+                        <a href="/marketplace"><img src="images/impresora.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature2"></a>
                         <h3>Impresoras 3D</h3>
                     </div>
                     <div class="col col-12 col-lg-4">
-                        <a href="/subs/market.html"><img src="images/raspberry.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature3"></a>
+                        <a href="/marketplace"><img src="images/raspberry.jpg" class="img-feature mb-3 mb-lg-4 mt-lg-0 mt-5" alt="Feature3"></a>
                         <h3>Raspberry Pi</h3>
                     </div>
                 </div>
