--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -169,9 +169,15 @@
                                     </div>
                                 </div>
                                 <div class="row my-3">
-                                    <div class="col col-6"><h5 class="">SubTotal </h5></div>
+                                    <div class="col col-6"><h5 class="">SubTotal: </h5></div>
                                     <div class="col col-6 text-end">
                                         <h5 id="subtotal_cash" class="">{{total_cash}} Bs</h5>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col col-6"><h5 class="">IVA: </h5></div>
+                                    <div class="col col-6 text-end">
+                                        <h5 id="subtotal_cash" class="">Incluido</h5>
                                     </div>
                                 </div>
                                 {{!-- <div class="row">
