--- a/views/admin/products/reports.hbs
+++ b/views/admin/products/reports.hbs
@@ -25,8 +25,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            {{> a_sidebar bar_reports="true"}}v>
-            </nav>
+            {{> a_sidebar bar_reports="true"}}
 
             <!-- dashboard -->
 
