--- a/views/partials/marketplace/navbar.hbs
+++ b/views/partials/marketplace/navbar.hbs
@@ -3,7 +3,7 @@
     <div class="container-fluid navbar-container">
     
         <nav class="navbar navbar-expand-lg navbar-dark mb-0 py-3">
-            <div class="container-fluid px-0">
+            <div class="container-fluid px-0 text-end">
                 <a class="navbar-brand align-text-center" href="/">
                     <div class="row">
                         <div class="col">
@@ -18,14 +18,16 @@
                         </div> 
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="col">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
     
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-start">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
@@ -40,30 +42,30 @@
                         </li>
                     </ul>
                     <a href="#Catalog">
-                        <div class="dropdown-center">
-                            {{#if user}}
-                                <div class="dropdown-center">
-                                    <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        <span class="ps-2"> {{user.first_name}}</span>
-                                    </a>
-                                    <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
-                                        <li><a class="dropdown-item" href="/marketplace/cart_shopping">Carrito</a></li>
-                                        <li><a class="dropdown-item" href="/marketplace/order">Pedido</a></li>
-                                        <li><a class="dropdown-item" href="/profile">Perfil</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="/logout">Cerrar Sesion</a></li>
-                                    </ul>
-                                </div>
-                            {{else}}
-                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/login">
-                                    <span class="ps-2 d-block"> Iniciar Sesion {{user.email}}</span>
-                                </a>
-                            {{/if}}
-                        </div>
                     </a>
+                    <div class="row text-start">
+                        {{#if user}}
+                            <div class="dropdown-center">
+                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle " data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <span class="ps-2"> {{user.first_name}}</span>
+                                </a>
+                                <ul id="dropdownEnter" class="dropdown-menu text-small shadow dropdown-menu-start dropdown-menu-lg-end mx-2">
+                                    <li><a class="dropdown-item" href="/marketplace/cart_shopping">Carrito</a></li>
+                                    <li><a class="dropdown-item" href="/marketplace/order">Pedido</a></li>
+                                    <li><a class="dropdown-item" href="/profile">Perfil</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="/logout">Cerrar Sesion</a></li>
+                                </ul>
+                            </div>
+                        {{else}}
+                            <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-md-0 ms-lg-2" href="/login">
+                                <span class="ps-2 d-block"> Iniciar Sesion {{user.email}}</span>
+                            </a>
+                        {{/if}}
+                    </div>
                 </div>
             </div>
         </nav>
