fixing mobile m size nav bar

--- a/views/partials/marketplace/navbar.hbs
+++ b/views/partials/marketplace/navbar.hbs
@@ -6,7 +6,7 @@
             <div class="container-fluid px-0 text-end">
                 <a class="navbar-brand align-text-center" href="/">
                     <div class="row">
-                        <div class="col">
+                        <div class="col pe-2">
                             <div class=" brand-container rounded mx-0 mx-md-auto">
                                 <img src="/images/brand.png" alt="Logo" class="brand-img">
                             </div>
