display search bar home solution on home and carrito buttons

--- a/views/partials/marketplace/market_header.hbs
+++ b/views/partials/marketplace/market_header.hbs
@@ -28,7 +28,7 @@
 
                 <div class="col col-3 col-lg-4 text-end ">
                     <a class="btn btn-primary" href="/marketplace/cart_shopping" role="button"><i class="fa-solid fa-cart-shopping"></i> 
-                    <span class="sopping-cart-text">Carrito</span></a>
+                    <span class="sopping-cart-text d-none d-md-inline-block">Carrito</span></a>
                 </div>
             </div>
         </div>
