adding some corrections and working in the heading marketplace partial

--- a/views/partials/marketplace/market_header.hbs
+++ b/views/partials/marketplace/market_header.hbs
@@ -1,17 +1,72 @@
 <section id="heading">
     <div class="container-fluid container-heading">
-        <div class="row">
-            <h1>Horarios de atencion : </h1>
-            <h2>10:30 - 20:30 mañanas</h2>
-            <h2>10:30 - 20:30 tardes</h2>
-            <h3>abierto</h3>
+        <div class="row mb-4 mx-3">
+            <div class="row text-center">
+                <h1 class="mb-0">Horarios de atención</h1>
+            </div>
+            <div class="px-2">
+                <hr class="border border-primary opacity-100 border-2 ">
+            </div>
+            <div class="row">
+                <div class="col col-12 col-md-6 text-center text-md-start">
+                    <h2>Lunes a Viernes</h2>
+                </div>
+                <div class="col col-12 col-md-6">
+                    <div class="row text-center">
+                        <div class="col col-12 col-lg-6  text-lg-end">
+                            <h3>mañanas</h3>
+                        </div>
+                        <div class="col col-12 col-lg-6">
+                            <h3>09:30 - 20:30</h3>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col col-12 col-lg-6 text-lg-end">
+                            <h3>tardes</h3>
+                        </div>
+                        <div class="col col-12 col-lg-6">
+                            <h3>14:00 - 18:30</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="px-2">
+                <hr class="border opacity-100 border-1 " style="border-color: #FFC93C!important">
+            </div>
+            <div class="row">
+                <div class="col col-12 col-md-6 text-center text-md-start">
+                    <h2>Sabados</h2>
+                </div>
+                <div class="col col-12 col-md-6">
+                    <div class="row text-center">
+                        <div class="col col-12 col-lg-6  text-lg-end">
+                            <h3>mañanas</h3>
+                        </div>
+                        <div class="col col-12 col-lg-6">
+                            <h3>09:30 - 20:30</h3>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col col-12 col-lg-6  text-lg-end">
+                            <h3>tardes</h3>
+                        </div>
+                        <div class="col col-12 col-lg-6">
+                            <h3>14:00 - 18:30</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center text-md-start">
+                <h3 class="fs-6 badge text-bg-success text-bold">abierto</h3>
+                {{!-- <h3 class="fs-6 badge text-bg-danger text-bold">cerrado</h3> --}}
+            </div>
         </div>
         
         <div class="search-bar-container">
             <div class="row">
                 <div class="col col-2 col-lg-4">
                     <a class="btn btn-primary" href="/marketplace" role="button">
-                        <i class="fa-solid fa-home"></i> <span class="sopping-cart-text">Inicio</span>
+                        <i class="fa-solid fa-home"></i> <span class="sopping-cart-text d-none d-md-inline">Inicio</span>
                     </a>
                 </div>
                 
