--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -89,19 +89,19 @@
                             {{/if}}
 
                             {{#if category_text}}
-                                <div class="row mb-2">
+                                <div class="row mb-2 mt-3 mt-lg-0">
                                     <h2>Categoría "<strong>{{category_text}}</strong>"</h2>
                                 </div>    
                             {{else}}
                                 {{#if search_text}}
-                                    <div class="row mb-2">
+                                    <div class="row mb-2 mt-3 mt-lg-0">
                                     <h2>Busqueda "<strong>{{search_text}}</strong>"</h2>
                                 </div>   
                                 {{/if}}
                             {{/if}}
                             <div class="row">
                             {{#each products}}
-                                <div class="col col-12 col-md-6 col-xl-4 mb-0 mb-lg-4 mt-5 mt-lg-0">
+                                <div class="col col-12 col-md-6 col-xl-4 mb-0 mb-lg-4 mt-2 mt-lg-0">
                                     <div class="card">
                                         <a href="/marketplace/product/{{id}}"><img src="{{img_dir}}" class="card-img-top" alt="{{name}}"></a>
                                         <div class="card-body">
