--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -80,7 +80,7 @@
                     <!-- cards part -->
 
                     <div class="col col-12 col-lg-9 px-0">
-                        <div class="container text-start">
+                        <div class="container text-start mt-2">
                             {{#if message}}
                                 <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
                                     {{message}}
@@ -101,7 +101,7 @@
                             {{/if}}
                             <div class="row">
                             {{#each products}}
-                                <div class="col col-12 col-md-6 col-xl-4 mb-0 mb-lg-4 mt-2 mt-lg-0">
+                                <div class="col col-12 col-md-6 col-xl-4 mb-2 mb-lg-4 mt-2 mt-lg-0">
                                     <div class="card">
                                         <a href="/marketplace/product/{{id}}"><img src="{{img_dir}}" class="card-img-top" alt="{{name}}"></a>
                                         <div class="card-body">
