landing heading page improved with the images carousel

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,15 +61,23 @@ p {
     font-size: 3.5rem;
 }
 
-.img-heading-container {
-    text-align: center;
+.img-overflow {
+    overflow-y: visible;
+    overflow-x: clip;
 }
 
-.heading-img {
-    width: 35%;
-    position:absolute;
-    right: 14%;
-    top: 12%;
+.img-heading-container {
+    height: 20px;
+}
+
+.heading-img-1 {
+    /* width: 35%; */
+        transform: translate(-1px, -50px);
+    /* width: 200%; */
+    /* position:absolute; */
+    /* right: 14%; */
+    /* top: 12%; */
+    /* z-index: 3; */
 }
 
 .heading-content {
@@ -208,8 +216,13 @@ footer i:hover {
 /* Extra large and avobe */
 
 @media (min-width: 1400px) {
-    .heading-img {
-            width: 30%;
+    .heading-img-1 {
+        /* width: 35%; */
+        transform: translate(-1px, -140px);
+    }
+    .heading-img-2 {
+        /* width: 35%; */
+        transform: translate(-1px, -50px);
     }
 
     .container-heading h1 {
@@ -234,9 +247,19 @@ footer i:hover {
 
     /* heading section */
 
-    .heading-img {
-        position: static;
-        width: 100%;
+    .img-heading-container {
+        height: 50vw;
+    }
+
+    .heading-img-1, .heading-img-2 {
+        height: 100%;
+        /* width: 35%; */
+        transform: translate(0);
+        /* width: 200%; */
+        /* position:absolute; */
+        /* right: 14%; */
+        /* top: 12%; */
+        /* z-index: 3; */
     }
 
     .container-heading {
