--- a/views/index.hbs
+++ b/views/index.hbs
@@ -106,11 +106,35 @@
                             </p> -->
                             <!-- <button type="button" class="dwl-button btn btn-outline-light btn-lg"><i class="fa-solid fa-store"></i> Download</button> -->
                         </div>
-                        <div class="col col-12 col-lg-6 img-heading-container">
-                            <img src="images/heading1.png" class="heading-img" alt="heading image">
+                        <div class="col col-12 col-lg-6 ">
+                            {{!-- carousel --}}
+                            <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel" data-bs-pause="true" data-bs-interval="5000">
+                                <div class="carousel-inner img-overflow">
+                                    <div class="carousel-item active">
+                                        <div class="img-heading-container">
+                                            <img src="/images/heading1.png" class="d-block w-100 heading-img-1" alt="...">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item ">
+                                        <div class="img-heading-container">
+                                            <img src="/images/heading2.png" class="d-block w-100 heading-img-2" alt="...">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="img-heading-container">
+                                            <img src="/images/heading3.png" class="d-block w-100 heading-img-2" alt="...">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="img-heading-container">
+                                            <img src="/images/heading4.png" class="d-block w-100 heading-img-2" alt="...">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <a href="/marketplace" type="button" class="dwl-button btn btn-outline-dark btn-lg mt-5 mt-lg-3"><i class="fa-solid fa-shop" style="color: #FFC93C"></i> Tienda</a>
+                    <a href="/marketplace" type="button" class="dwl-button btn btn-outline-dark btn-lg mt-4 mt-lg-3"><i class="fa-solid fa-shop" style="color: #FFC93C"></i> Tienda</a>
                 </div>
             </div>
             
@@ -119,7 +143,7 @@
                 <path fill="#1363DF" fill-opacity="1"
                     d="M0,96L60,117.3C120,139,240,181,360,192C480,203,600,181,720,197.3C840,213,960,267,1080,250.7C1200,235,1320,149,1380,106.7L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
                 </path> -->
-            </svg>
+            {{!-- </svg> --}}
         </section>
 
         <section id="Features">
