download catalog mutton working and file catal catalog uploaded

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -212,7 +212,9 @@
                             <h1 class="catalog-heading">Descarga nuestro Calogo de Productos</h1>
                             <p class="dark-text">contamos con una gran variedad de productos, por esto le presentamos nuestro catalogo a su dispocicion</p>
                             <div class="mb-3 mb-lg-1 text-center">
-                                <button type="button" class="btn btn-outline-dark btn-lg mt-5"><i class="fa-sharp fa-solid fa-download"></i> Descargar Catálogo<o/button>
+                                <form action="/download-catalog" method="get">
+                                    <button type="submit" class="btn btn-outline-dark btn-lg mt-5"><i class="fa-sharp fa-solid fa-download"></i> Descargar Catálogo</button>
+                                </form>
                             </div>
                         </div>
                         <div class="col col-12 col-lg-6 text-center">
