--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -20,7 +20,18 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="stylesheet" href="/css/styles_dashboard.css">
+
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <style>
+        .upload-image {
+            border-radious:20px;
+            border: 2px dashed #bbb5ff; 
+            background-color: #f7f8ff;
+        }
+    </style>
 </head>
 
 <body>
@@ -59,11 +70,18 @@
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
+                                <img src="/images/products/no image.jpg" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
                                     <form action="/admin/add_product" method="POST" enctype="multipart/form-data">
                                         <div class="pb-3">
-                                            <label class="form-label" for="customFile">Subir Imagen</label>
-                                            <input type="file" class="form-control" id="image" name="image"/>
+                                            <label class="form-label w-100" for="image">Subir Imagen
+                                                <div id="drop-area">
+                                                    <input type="file" class="form-control" id="image" name="image" hidden>
+                                                    <div class="form-control text-center upload-image text-muted">
+                                                        <p class="my-0"><i class="fa-solid fa-upload"></i> Arrastre o <strong>haga click</strong> para subir una imagen</p>
+                                                    </div>
+                                                </div>
+                                            </label>
                                         </div>
                                         <div class="form-group pb-1">
                                             <!-- {{!-- <input type="number" name="id" class="form-control" placeholder="ID" autofocus
@@ -135,6 +153,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    <script src="/js/add_products.js"></script>
 
 </body>
 
