implementing drag and drop to the edit product  in the admin pages

--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -25,13 +25,6 @@
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-    <style>
-        .upload-image {
-            border-radious:20px;
-            border: 2px dashed #bbb5ff; 
-            background-color: #f7f8ff;
-        }
-    </style>
 </head>
 
 <body>
@@ -77,7 +70,7 @@
                                             <label class="form-label w-100" for="image">Subir Imagen
                                                 <div id="drop-area">
                                                     <input type="file" class="form-control" id="image" name="image" hidden>
-                                                    <div class="form-control text-center upload-image text-muted">
+                                                    <div class="form-control text-center border-primary border-opacity-50 bg-primary bg-opacity-10 text-muted" style="border: 2px dashed;">
                                                         <p class="my-0"><i class="fa-solid fa-upload"></i> Arrastre o <strong>haga click</strong> para subir una imagen</p>
                                                     </div>
                                                 </div>
