--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -21,6 +21,9 @@
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/css/styles_dashboard.css">
+
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -60,12 +63,18 @@
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
-                                <img src="{{product.img_dir}}" class="card-img-top" alt="...">
+                                <img src="{{product.img_dir}}" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
                                     <form action="/admin/edit_product/{{product.id}}" method="POST" enctype="multipart/form-data">
                                         <div class="pb-3">
-                                            <label class="form-label" for="customFile">Cambiar Imagen</label>
-                                            <input type="file" class="form-control" id="image" name="image"/>
+                                            <label class="form-label w-100" for="image">Cambiar Imagen
+                                                <div id="drop-area">
+                                                    <input type="file" class="form-control" id="image" name="image" hidden>
+                                                    <div class="form-control text-center border-primary border-opacity-50 bg-primary bg-opacity-10 text-muted" style="border: 2px dashed;">
+                                                        <p class="my-0"><i class="fa-solid fa-upload"></i> Arrastre o <strong>haga click</strong> para subir una imagen</p>
+                                                    </div>
+                                                </div>
+                                            </label>
                                         </div>
                                         <div class="form-group pb-1">
                                             <!-- {{!-- <input type="number" name="id" class="form-control" placeholder="ID" autofocus
@@ -137,6 +146,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    <script src="/js/add_products.js"></script>
 
 </body>
 
